add product single page

--- a/prototype/src/product-listing.html
+++ b/prototype/src/product-listing.html
@@ -35,278 +35,292 @@
                 </div>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
-            </div>
-            <div class="product-listing__product-number">
-                <span>284,038</span>
-                <p>&nbsp;products found for:&nbsp;</p>
-                <span>"necklace"</span>
-                <div class="showing">
-                    <span>1</span>
-                    <p> - </p>
-                    <span>20</span>
-                    <p>of 284,103 products</p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
-            </div>
-            <div class="product-listing__product-number">
-                <span>284,038</span>
-                <p>&nbsp;products found for:&nbsp;</p>
-                <span>"necklace"</span>
-                <div class="showing">
-                    <span>1</span>
-                    <p> - </p>
-                    <span>20</span>
-                    <p>of 284,103 products</p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product2.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product2.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product3.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product3.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
             <div class="product-listing__products__item">
-                <div class="content">
-                    <div class="img">
-                        <img src="assets/img/product1.jpg" alt="">
+                <a href="product-detail.html">
+                    <div class="content">
+                        <div class="img">
+                            <img src="assets/img/product1.jpg" alt="">
+                        </div>
+                        <p class="title">
+                            Bracelet Brown
+                        </p>
+                        <hr>
+                        <p class="price">
+                            £ 10.00
+                        </p>
                     </div>
-                    <p class="title">
-                        Bracelet Brown
-                    </p>
-                    <hr>
-                    <p class="price">
-                        £ 10.00
-                    </p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
