--- a/prototype/src/lookbook.html
+++ b/prototype/src/lookbook.html
@@ -1,6 +1,125 @@
 @@include('head.html')
 @@include('navigation.html')
 
-
+<section class="lookbook">
+    <div class="container">
+        <div class="lookbook__item">
+            <div class="image">
+                <img src="assets/img/lb1.jpg" alt="">
+            </div>
+            <div class="text">
+                <div class="text-container">
+                    <p class="title">
+                        Summer look
+                    </p>
+                    <hr>
+                    <div class="summary">
+                        <ul>
+                            <li>
+                                <a href="product-detail.html">Black Hat - <b>£14.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Coral Necklace - <b>£9.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Golden Bracelett - <b>£4.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Pantera styled bag - <b>£24.99</b></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="lookbook__item">
+            <div class="text">
+                <div class="text-container">
+                    <p class="title">
+                        Stylish evening
+                    </p>
+                    <hr>
+                    <div class="summary">
+                        <ul>
+                            <li>
+                                <a href="product-detail.html">Black Hat - <b>£14.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Coral Necklace - <b>£9.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Golden Bracelett - <b>£4.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Pantera styled bag - <b>£24.99</b></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/img/lb2.jpg" alt="">
+            </div>
+        </div>
+        <div class="lookbook__item">
+            <div class="image">
+                <img src="assets/img/lb3.jpg" alt="">
+            </div>
+            <div class="text">
+                <div class="text-container">
+                    <p class="title">
+                        Sunny morning
+                    </p>
+                    <hr>
+                    <div class="summary">
+                        <ul>
+                            <li>
+                                <a href="product-detail.html">Black Hat - <b>£14.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Coral Necklace - <b>£9.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Golden Bracelett - <b>£4.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Pantera styled bag - <b>£24.99</b></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="lookbook__item">
+            <div class="text">
+                <div class="text-container">
+                    <p class="title">
+                        Working girl
+                    </p>
+                    <hr>
+                    <div class="summary">
+                        <ul>
+                            <li>
+                                <a href="product-detail.html">Black Hat - <b>£14.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Coral Necklace - <b>£9.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Golden Bracelett - <b>£4.99</b></a>
+                            </li>
+                            <li>
+                                <a href="product-detail.html">Pantera styled bag - <b>£24.99</b></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="image">
+                <img src="assets/img/lb6.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</section>
 
 @@include('footer.html')
