--- a/prototype/src/product-listing.html
+++ b/prototype/src/product-listing.html
@@ -3,7 +3,7 @@
 
 <div class="container">
     <section class="product-listing">
-        @@include('filters.html')
+        <!-- @@include('filters.html') -->
         <div class="product-listing__products">
             <aside class="product-listing__searchbar">
                 <form>
