--- a/prototype/src/landing.html
+++ b/prototype/src/landing.html
@@ -3,22 +3,24 @@
 
 <div class="container">
 
-	<section class="home home__product">
-		<div class="image">
-			<img src="assets/img/product1.jpg" alt="">
-		</div>
-		<div class="text">
-			<div class="text-container">
-				<p class="title">
-					Browse through jewelery
-				</p>
-				<hr>
-				<p class="summary">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas malesuada rhoncus nisl a condimentum.
-				</p>
-				<a href="#" class="btn btn-default">
-					<span>Go to Shop</span>
-				</a>
+	<section class="home home__products">
+		<div class="home__products-item">
+			<div class="image">
+				<img src="assets/img/product1.jpg" alt="">
+			</div>
+			<div class="text">
+				<div class="text-container">
+					<p class="title">
+						Browse through jewelery
+					</p>
+					<hr>
+					<p class="summary">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas malesuada rhoncus nisl a condimentum.
+					</p>
+					<a href="#" class="btn btn-default">
+						<span>Go to Shop</span>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
